<resources>
    <string name="app_name">InventoryFragment</string>
    <string name="sign_in">Sign In</string>
    <string name="name_or_email">User Name/e-mail address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="creation_date">Creation Date</string>
    <string name="change_state">Change State</string>
    <string name="nombre_">Name:</string>
    <string name="serial_">Serial:</string>
    <string name="vendedor_">Salesman:</string>
    <string name="modelo_">Model:</string>
    <string name="categoria_">Category:</string>
    <string name="subcategoria_">Subcategory:</string>
    <string name="tipo_">Type:</string>
    <string name="descripcion_">Description:</string>
    <string name="precio_">Prize:</string>
    <string name="fecha_">Date:</string>
    <string name="url_">URL:</string>
    <string name="notas_">Notes:</string>
    <string name="txtDefault">default</string>
    <string name="hint_nombre">Escriba el nombre</string>
    <string name="hint_description">Escriba la descripción</string>
    <string name="hint_shortname">Escriba el nombre corto</string>
    <string name="Add">Añadir</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">CANCEL</string>
    <string name="action_list_dependency_delete">Eliminar</string>
</resources>
