<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/inventory_padding"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context="com.example.usuario.inventoryfragment.ui.inventory.InventoryActivity"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txvName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txvDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"
            />

        <EditText
            android:id="@+id/edtShortName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvCreationDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/creation_date"
            />

        <EditText
            android:id="@+id/edtCreationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <Button
                android:id="@+id/btnChangeState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_state"
                android:layout_gravity="center"
                android:layout_span="2"
                />
    </TableRow>

</TableLayout>